--- a/concord.yml
+++ b/concord.yml
@@ -1,3 +1,17 @@
+configuration:
+  arguments:
+    todoId: "1"
+
 flows:
   default:
-  - log: "Hello Concord User"
+    - task: http
+      in:
+        url: "https://jsonplaceholder.typicode.com/todos/${todoId}"
+        response: json
+        out: myTodo
+
+    - if: "${myTodo.content.completed}"
+      then:
+        - log: "All done!"
+      else:
+        - log: "You got a todo item: ${myTodo.content.title}"
