--- a/concord.yml
+++ b/concord.yml
@@ -1,6 +1,7 @@
 configuration:
   arguments:
     todoId: "1"
+    myVar: "world"
 
 flows:
   default:
@@ -15,3 +16,7 @@ flows:
         - log: "All done!"
       else:
         - log: "You got a todo item: ${myTodo.content.title}"
+    - script: js
+      body: |
+        var slack = tasks.get("slack");
+        slack.call(execution, "C01CTRVL7J9", "Hi there!");
