--- a/concord.yml
+++ b/concord.yml
@@ -1,22 +1,10 @@
-configuration:
-  arguments:
-    todoId: "1"
-    myVar: "world"
-
 flows:
-  default:
-    - task: http
-      in:
-        url: "https://jsonplaceholder.typicode.com/todos/${todoId}"
-        response: json
-        out: myTodo
-
-    - if: "${myTodo.content.completed}"
-      then:
-        - log: "All done!"
-      else:
-        - log: "You got a todo item: ${myTodo.content.title}"
-    - script: js
-      body: |
-        var x = execution.getVariable("an-illegal-name");
-        print("We got", x);
+  onPush:
+  - log: "${event.sender} pushed ${event.commitId} to ${event.payload.repository.full_name}"
+  
+triggers:
+- github:
+    useInitiator: true
+    entryPoint: onPush
+    conditions:
+      type: push
