--- a/concord.yml
+++ b/concord.yml
@@ -1,6 +1,20 @@
 flows:
-  onPush:
-  - log: "${event.sender} pushed ${event.commitId} to ${event.payload.repository.full_name}"
+  default:
+    - task: http
+      in:
+        url: "https://jsonplaceholder.typicode.com/todos/${todoId}"
+        response: json
+        out: myTodo
+
+    - if: "${myTodo.content.completed}"
+      then:
+        - log: "All done!"
+      else:
+        - log: "You got a todo item: ${myTodo.content.title}"
+    - script: js
+      body: |
+        var slack = tasks.get("slack");
+        slack.call(execution, "A01CTS85QJH", "Hi there!");
   
 triggers:
 - github:
