--- a/concord.yml
+++ b/concord.yml
@@ -16,7 +16,7 @@ flows:
       else:
         - log: "You got a todo item: ${myTodo.content.title} MADAF"
   onPush:
-    - log: "${event.sender} pushed ${event.commitId} to ${event.payload.repository.full_name}"
+    - log: "${event.sender} pushed ${event.commitId} to ${event.payload.repository.full_name} :·:·:·"
 triggers:
 - github:
     useInitiator: true
