--- a/concord.yml
+++ b/concord.yml
@@ -32,6 +32,7 @@ flows:
  
 triggers:
   - github:
+    useInitiator: true
     entryPoint: onPush
     conditions:
-      type: "push"
+      type: push
