--- a/concord.yml
+++ b/concord.yml
@@ -1,9 +1,29 @@
 configuration:
+  dependencies:
+  - mvn://com.walmartlabs.concord.plugins:jenkins-task:1.30.0
   arguments:
-    dontTestLabel: "don't test"
-
+    todoId: "1"
+    myVar: "world"
 flows:
-  onPr:
+  default:
+    - task: http
+      in:
+        url: "https://jsonplaceholder.typicode.com/todos/${todoId}"
+        response: json
+        out: myTodo
+
+    - if: "${myTodo.content.completed}"
+      then:
+        - log: "All done!"
+      else:
+        - log: "OK!"
+    - task: jenkins
+      in:
+        baseUrl: "http://104.214.35.206:8080/"
+        username: "jdominguez"
+        apiToken: "1177dcbd55b3f0b60ae190fd1b5e62aea0"
+        jobName: "Testing"
+  onPush:
     - task: http
       in:
         request: json
@@ -17,19 +37,13 @@ flows:
     - if: ${response.success}
       then:
       - log: "Response received: ${response.content}"
-
 triggers:
-  - github:
-      version: 2
-      entryPoint: onPr
-      useInitiator: true
-      arguments:
-        concordRevision: "${event.payload.pull_request.head.sha}"
-        prLabels: "${event.payload.pull_request.labels}"
-      conditions:
-        githubOrg: "jdominguezr"
-        githubRepo: "MyFirstMiniApp"
-        branch: ".*"
-        type: "pull_request"
-        payload:
-          action: "(opened|synchronize)"
+- github:
+    type: push
+    useInitiator: true
+    entryPoint: onPush
+
+#bien jalao si funciona con cron :) pero no con los eventos de git :(
+#- cron:
+#    spec: "0,3,6,9 * * * *"
+#    entryPoint: hourlyCleanUp
